# oglr

./: .gitmodules  CMakeLists.txt
assets/shaders/: basic.frag  basic.vert  basic_shader_uniforms.glsl  depth_only.vert  fullscreen_tri.vert  light.glsl  lighting.glsl  lines.frag  lines.vert  postfx.frag  shadow_cube.frag  solid_color.frag  vertex.glsl
src/: AABB.cpp  AABB.h  App.cpp  App.h  CPUMesh.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  FrustumCulling.cpp  FrustumCulling.h  GLDebugCallback.cpp  GLDebugCallback.h  GPUBuffer.h  GPUMesh.h  GlobalAxes.h  GraphicsUtil.cpp  GraphicsUtil.h  ImageLoader.cpp  Light.cpp  Light.h  Meshes.h  Transform.h  main.cpp
